--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -34,6 +34,13 @@
 	font-size: 11px;
 	padding:10px;
 }
+h1,h2,h3 {
+	background-color:#FFFFFF;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 11px;
+    font-weight: normal;
+    display:inline; 
+}
 .content_main_bold {
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 11px;
