--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -44,6 +44,7 @@ h1,h2,h3 {
 .content_main_bold {
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 11px;
+	color: #34282C;
 	font-weight: bold;
 }
 .tekst7o {
