--- a/help/datacrow_help.css
+++ b/help/datacrow_help.css
@@ -46,16 +46,17 @@ H3 {
 	font-size: 12pt;
 	color: #777676;
     font-style: italic;
-}	
+}
 
 A {
-    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+    font-family: Arial, Verdana, Geneva, Arial, Helvetica, sans-serif;
+    font-size: 11pt;
 	text-decoration: underline;
 	color: #918F8F;
 }
 
 A:Hover {
-    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+    font-family: Arial, Verdana, Geneva, Arial, Helvetica, sans-serif;
     font-size: 11pt;
 	text-decoration: underline;
 	color: #00D647;
