*** empty log message ***

--- a/help/datacrow_help.css
+++ b/help/datacrow_help.css
@@ -26,8 +26,8 @@ H1, H2, H3 {
 }
 
 IMG {
-    margin-top: 5px;
-    margin-bottom: 10Px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 H1 {
